syntax = "proto3";

package common.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/alexis871aa/microservices-rocket-factory/shared/pkg/proto/common/v1;common_v1";

/**
 * Способ уведомления
 */
message NotificationMethod {
  string provider_name = 1; // Провайдер: telegram, email, push
  string target = 2;        // Адрес/идентификатор назначения (email, чат-id)
}

/**
 * Базовая информация о пользователе
 */
message UserInfo {
  string login = 1;                                      // Логин
  string email = 2;                                      // Email
  repeated NotificationMethod notification_methods = 3; // Каналы уведомлений
}

/**
 * Информация о пользователе
 */
message User {
  string uuid = 1;    // UUID пользователя
  UserInfo info = 2;  // Базовая информация
  google.protobuf.Timestamp created_at = 3; // Время создания
  google.protobuf.Timestamp updated_at = 4; // Время последнего обновления
}