syntax = "proto3";

package events.v1;

option go_package = "../shared/pkg/proto/events/v1;events_v1";

// Событие оплаты заказа
message OrderPaid {
  string event_uuid = 1;  // Уникальный идентификатор события
  string order_uuid = 2;  // Идентификатор оплаченного заказа
  string user_uuid = 3; // Идентификатор пользователя
  string payment_method = 4;  // Способ оплаты (строкой, значение из PaymentMethod)
  string transaction_uuid = 5;  // Идентификатор транзакции, сгенерированный в результате оплаты
}

// Событие о готовности космического корабля (собран)
message ShipAssembled {
  string event_uuid = 1;  // Уникальный идентификатор события
  string order_uuid = 2;  // Идентификатор собранного заказа
  string user_uuid = 3; // Идентификатор пользователя
  int64 build_time_sec = 4; // Время (в секундах), потраченное на сборку корабля
}
